@@ -1,0 +1,9 @@
+package rbasamoyai.createbigcannons.munitions.big_cannon.propellant;
+
+public interface IntegratedPropellantProjectile {
+
+	float getChargePower();
+	float getStressOnCannon();
+	float getSpread();
+
+}
